--- a/.github/workflows/open-pr.yaml
+++ b/.github/workflows/open-pr.yaml
@@ -2,7 +2,11 @@ on:
   push:
     branches:
       - feature**
-  
+
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   open-pr:
     runs-on: ubuntu-latest
