checar se pr existe antes de tentar abrir

--- a/.github/workflows/open-pr.yaml
+++ b/.github/workflows/open-pr.yaml
@@ -15,7 +15,19 @@ jobs:
       - name: Extract branch name
         id: extract_branch
         run: echo "::set-output name=branch::${GITHUB_REF#refs/heads/}"
+      - name: Check for existing PR
+        id: check_pr
+        run: |
+          gh pr list --state open --base main --head ${{ github.ref }} > pr_list.txt
+          if grep -q "${{ steps.extract_branch.outputs.branch }}" pr_list.txt; then
+            echo "::set-output name=pr_exists::true"
+          else
+            echo "::set-output name=pr_exists::false"
+          fi
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Open PR
+        if: steps.check_pr.outputs.pr_exists == 'false'
         run: gh pr create --base main --head ${{ github.ref }} --title "Open PR from ${{ steps.extract_branch.outputs.branch }}" --body "This is an open PR from ${{ steps.extract_branch.outputs.branch }} branch."
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
