--- a/.github/workflows/open-pr.yaml
+++ b/.github/workflows/open-pr.yaml
@@ -14,15 +14,15 @@ jobs:
         uses: actions/checkout@v4
       - name: Extract branch name
         id: extract_branch
-        run: echo "::set-output name=branch::${GITHUB_REF#refs/heads/}"
+        run: echo "branch=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
       - name: Check for existing PR
         id: check_pr
         run: |
-          gh pr list --state open --base main --head ${{ github.ref }} > pr_list.txt
+          gh pr list --state open --base main --head ${{ github.ref }} --json headRefName > pr_list.txt
           if grep -q "${{ steps.extract_branch.outputs.branch }}" pr_list.txt; then
-            echo "::set-output name=pr_exists::true"
+            echo "pr_exists=true" >> $GITHUB_OUTPUT
           else
-            echo "::set-output name=pr_exists::false"
+            echo "pr_exists=false" >> $GITHUB_OUTPUT
           fi
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
