--- a/.github/workflows/open-pr.yaml
+++ b/.github/workflows/open-pr.yaml
@@ -19,6 +19,8 @@ jobs:
         id: check_pr
         run: |
           gh pr list --state open --base main --head ${{ github.ref }} --json headRefName > pr_list.txt
+          cat pr_list.txt
+          cat ${{ github.ref }}
           if grep -q "${{ steps.extract_branch.outputs.branch }}" pr_list.txt; then
             echo "pr_exists=true" >> $GITHUB_OUTPUT
           else
