--- a/.github/workflows/open-pr.yaml
+++ b/.github/workflows/open-pr.yaml
@@ -7,8 +7,26 @@ permissions:
   pull-requests: write
 
 jobs:
+  build-and-test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test > test_results.txt
+      - name: Extract test results
+        id: test_results
+        run: | 
+          echo "test_results=$(cat test_results.txt)" >> $GITHUB_OUTPUT
+          cat test_results.txt
   open-pr:
     runs-on: ubuntu-latest
+    needs: build-and-test
     steps:
       - name: Check out repository code 
         uses: actions/checkout@v4
