--- a/.github/workflows/open-pr.yaml
+++ b/.github/workflows/open-pr.yaml
@@ -18,11 +18,14 @@ jobs:
           node-version: '20.x'
       - run: npm ci
       - run: npm run build --if-present
-      - run: npm test > test_results.txt
-      - name: Extract test results
-        id: test_results
-        run: | 
-          cat test_results.txt
+      - run: npm test
+      - name: Save test results
+        run: |
+          totalTests=$(jq '.numTotalTests' results.json)
+          passedTests=$(jq '.numPassedTests' results.json)
+          echo "total_tests=$totalTests" >> $GITHUB_OUTPUT
+          echo "passed_tests=$passedTests" >> $GITHUB_OUTPUT
+          
   open-pr:
     runs-on: ubuntu-latest
     needs: build-and-test
@@ -45,6 +48,9 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Open PR
         if: steps.check_pr.outputs.pr_exists == 'false'
-        run: gh pr create --base main --head ${{ github.ref }} --title "Open PR from ${{ steps.extract_branch.outputs.branch }}" --body "This is an open PR from ${{ steps.extract_branch.outputs.branch }} branch."
+        run: |
+          gh pr create --base main --head ${{ github.ref }} \
+          --title "Open PR from ${{ steps.extract_branch.outputs.branch }}" \
+          --body "This is an open PR from ${{ steps.extract_branch.outputs.branch }} branch. It contains ${{ env.total_tests }} tests, out of which ${{ env.passed_tests }} tests have passed."
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
